kick out powermock, upgrade mockito, use jmockit